fixed issue with the header background not showing on scroll

--- a/src/assets/css/style.scss
+++ b/src/assets/css/style.scss
@@ -459,6 +459,7 @@ a {
   color: white;
   width: 100%;
   height: $subheader-height;
+  margin-top: $header-height;
   padding: 1rem;
   display: flex;
   align-items: center;
@@ -1336,6 +1337,7 @@ div.select {
     overflow: hidden;
     z-index: 1;
     width: 100%;
+    margin: 0;
     transition: all 1s ease-out;
     &:last-child{
       margin-bottom:0;
